<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.c8.research.comming.activities.MainActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:attribution_gravity="bottom|end"
        app:attribution_margin_bottom="35dp"
        app:logo_gravity="bottom|end"
        app:logo_margin_right="20dp"
        app:logo_margin_bottom="38dp"
        app:zoom="16"
        app:style_url="@string/style_mapbox_streets"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textAlignment="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo_alt"/>

    <com.dd.processbutton.iml.ActionProcessButton
        style="@style/AppTheme.ColoredButton"
        android:id="@+id/share_location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="23dp"
        android:paddingBottom="29dp"
        android:paddingStart="81dp"
        android:paddingEnd="86dp"
        android:drawableStart="@drawable/ic_share_white_24dp"
        android:drawablePadding="9dp"
        android:text="@string/share_location_label"
        android:textAllCaps="false"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:pb_colorNormal="@color/colorPrimaryAlt"
        app:pb_colorPressed="@color/colorPrimaryAltLight"
        app:pb_colorProgress="@color/colorMenuText"
        app:pb_textProgress="@string/progress_indicator_label"/>

</RelativeLayout>
