<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.c8.research.comming.activities.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <EditText
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:imeOptions="actionDone"
        android:hint="@string/your_name_label"
        tools:ignore="LabelFor"/>

    <ImageView
        android:id="@+id/selected_avatar_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/title_edit"
        android:src="@drawable/man1lg"
        android:contentDescription="@string/selected_avatar_alt"
        android:scaleType="fitCenter"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/avatar_chooser_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selected_avatar_view"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    <Switch
        android:id="@+id/enabled_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/enabled_switch"
        android:layout_alignBaseline="@id/enabled_switch"
        android:layout_marginLeft="7dp"
        android:labelFor="@id/enabled_switch"
        android:text="@string/enabled_switch_label"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
